Run CI on the IDL 2.0 branch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: ci
 
 on:
   push:
-    branches: [main]
+    branches: [main, idl-2.0]
   pull_request:
-    branches: [main]
+    branches: [main, idl-2.0]
 
 jobs:
   build:
