--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,10 @@ on:
     branches: [main]
 
 jobs:
+  # WARNING: If you add a new job, make sure to add it to the "need" list for the
+  # amend job to make sure it always runs last. This is to make sure that it
+  # doesn't end up hiding the workflow run.
+
   build:
     runs-on: ${{ matrix.os }}
     name: Java ${{ matrix.java }} ${{ matrix.os }}
@@ -63,3 +67,25 @@ jobs:
       with:
         name: built-docs
         path: docs/build/html
+
+  amend:
+      name: "Add PR links to staged changelogs"
+      runs-on: ubuntu-latest
+      needs:
+        - build
+        - build-docs
+      steps:
+          - uses: actions/checkout@v4
+            with:
+              ref: ${{ github.head_ref }}
+
+          - uses: actions/setup-python@v5
+            with:
+              python-version: "3.13"
+
+          - name: "Amend and push any staged changelogs"
+            run: |
+              git config user.name "github-actions[bot]"
+              git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+              git fetch origin ${{ github.base_ref }}
+              ./.changes/amend --push
