--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -7,8 +7,10 @@ on:
                     based on the staged features.
                 type: choice
                 options:
-                    - minor
+                    - default
                     - patch
+                    - minor
+                default: default
 jobs:
     # Bumps the Smithy version based on pending features and
     # updates the changelog.
@@ -38,13 +40,13 @@ jobs:
                 uv sync --locked --all-extras --all-groups
 
             - name: Update changelog and bump version with selected type
-              if: ${{ inputs.bump_type }}
+              if: ${{ inputs.bump_type == 'default' }}
               run: |
                 cd .changes
                 uv run release -b ${{ inputs.bump_type }}
 
             - name: Update changelog and bump version
-              if: ${{ ! inputs.bump_type }}
+              if: ${{ inputs.bump_type != 'default' }}
               run: |
                 cd .changes
                 uv run release
