--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -60,4 +60,7 @@ jobs:
                 git switch -c "bump-$(cat VERSION)"
                 git add .changes/next-release .changes/releases VERSION CHANGELOG.md
                 git commit -m "Bump version to $(cat VERSION)"
-                gh pr create --base main --title "Bump version to $(cat VERSION)"
+                gh pr create \
+                    --base main \
+                    --title "Bump version to $(cat VERSION)"
+                    --body "Bump version to $(cat VERSION)"
