--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -20,6 +20,9 @@ jobs:
         permissions:
             # Used to create a pull request.
             pull-requests: write
+
+            # Used to push the branch
+            contents: write
         steps:
             - name: Pull repository
               uses: actions/checkout@v4
@@ -60,6 +63,7 @@ jobs:
                 git switch -c "bump-$(cat VERSION)"
                 git add .changes/next-release .changes/releases VERSION CHANGELOG.md
                 git commit -m "Bump version to $(cat VERSION)"
+                git push origin "bump-$(cat VERSION)"
                 gh pr create \
                     --base main \
                     --title "Bump version to $(cat VERSION)" \
